# ds-double-linked-list

./: CMakeLists.txt  README.md  main.cpp
include/: DoubleCircularList.h  DoubleCircularListComposition.h  DoubleLinkedList.h  List.h  Node.h
outputs/: double_circular_list.dot  double_circular_list_composition.dot  double_linked_list.dot
source/: DoubleCircularList.tpp  DoubleCircularListComposition.tpp  DoubleLinkedList.tpp  Node.cpp  Node.tpp
test/DoubleCircularList/: DoubleCircularListTest.cpp
test/DoubleCircularListComposition/: DoubleCircularListCompositionTest.cpp
test/DoubleLinkedList/: DoubleLinkedListTest.cpp
test/Node/: NodeTest.cpp
